
The following changes have been implemented:

* Routes gain control of the data flow as soon as they are executed. A route cannot be executed until all of its arguments are fulfilled, so data will reside on memory or disk until the route can be executed.
* After processing a chunk of data it is immediately released. For memory uploads this means the data is immediately freed. For disk uploads the data remains on disk until after processing.
* Two new configuration options are available to support mixed uploads: `micronaut.server.multipart.mixed` and `micronaut.server.multipart.threshold`. When data needs to be buffered, mixed uploads will initially store data in memory. Once the threshold is reached, the data will be erased from memory and moved entirely onto disk.

=== Option to Disable Environment Detection

Environment detection can be disabled through a method on the application context builder, system property, or evnironment variable.

See the <<environments, Environment>> documentation for more information.

=== Dependency Upgrades

- Groovy `2.5.4` -> `2.5.6`
- Gradle `4.10.2` -> `5.1.1` (CLI Only)
- Kafka `2.0.1` -> `2.1.1`
- Micrometer `1.0.6` -> `1.1.2`
- Reactive Streams `1.0.1` -> `1.0.2`
- Jackson `2.9.7` -> `2.9.8`
- Nimbus JOSE+JWT  `6.0.2` -> `6.8`
- Spring `5.0.10.RELEASE` -> `5.1.4.RELEASE`
- Reactor `3.2.0.RELEASE` -> `3.2.5.RELEASE`
- RxJava 2 `2.2.2` -> `2.2.6`
- Reactive Postgres `0.10.5` -> `0.11.2`
- GORM `6.1.8.RELEASE` -> `7.0.0.RC1`
- Hibernate `5.3.7.Final` -> `5.4.0.Final`
- Hikari `2.7.9` -> `3.3.0`
- Commons DBCP 2 `2.1.1` -> `2.5.0`
- Tomcat Pool `9.0.1` -> `9.0.14`
- Neo4j Java Driver `1.6.4` -> `1.7.2`
- Mongo Java Driver `3.8.0` -> `3.10.0`
- Mongo Reactive Driver `1.8.0` -> `1.10.0`
- Redis Lettuce Driver `5.0.4.RELEASE` -> `5.1.3.RELEASE`
- Jaeger `0.31.0` -> `0.33.1`
- Zipkin Reporter `2.7.9` -> `2.8.0`
- Brave Instrumentation HTTP `5.4.2` -> `5.6.1`
- Brave Opentracing -> `0.33.3` -> `0.33.10`